bash-tools/kubernetes-configs/selenium-grid/base/selenium-grid-node-firefox.yaml
#
#  Author: KhulnaSoft Ltd
#  Date: 2021-05-13 13:06:05 +0100 (Thu, 13 May 2021)
#
#  vim:ts=2:sts=2:sw=2:et
#  lint: k8s
#
#  https://github.com/KhulnaSoft/DevX/tree/main/bash-tools/kubernetes
#
#  License: see accompanying KhulnaSoft Ltd LICENSE file
#
#  If you're using my code you're welcome to connect with me on LinkedIn
#  and optionally send me feedback to help improve or steer this or other code I publish
#
#  https://www.linkedin.com/company/khulnasoft
#

# ============================================================================ #
#          S e l e n i u m   G r i d   -   N o d e   -   F i r e f o x
# ============================================================================ #

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: selenium-node-firefox
  namespace: selenium
  labels:
    app: selenium-node
    browser: firefox
spec:
  selector:
    matchLabels:
      app: selenium-node
      browser: firefox
  template:
    metadata:
      labels:
        app: selenium-node
        browser: firefox
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  # gke-preemptible not valid on GKE AutoPilot clusters - remove in that case and leave only gke-spot
                  - key: cloud.google.com/gke-preemptible
                    operator: DoesNotExist
                  - key: cloud.google.com/gke-spot
                    operator: DoesNotExist
                  - key: eks.amazonaws.com/capacityType
                    operator: NotIn
                    values:
                      - SPOT
                  - key: kubernetes.azure.com/scalesetpriority
                    operator: NotIn
                    values:
                      - spot
      securityContext:
        runAsNonRoot: true
      terminationGracePeriodSeconds: 600
      containers:
        - name: selenium-node-firefox
          #image: selenium/node-firefox:3.141.59
          #image: selenium/node-firefox:88.0  # requires Hub 4.0
          image: selenium/node-firefox:4.1.2
          ports:
            - containerPort: 5555
            - containerPort: 5900  # VNC
            - containerPort: 7900  # noVNC (browser)
          readinessProbe:
            httpGet:
              path: /status
              port: 5555
            initialDelaySeconds: 10
          livenessProbe:
            httpGet:
              path: /status
              port: 5555
            initialDelaySeconds: 30
          # https://www.selenium.dev/documentation/en/grid/grid_4/grid_endpoints/#drain
          lifecycle:
            preStop:
              exec:
                command:
                  - /bin/sh
                  - -c
                  - curl -X POST 'http://localhost:5555/se/grid/node/drain' -H 'X-REGISTRATION-SECRET;' && while curl localhost:5555/status; do sleep 1; done
          resources:
            requests:
              cpu: 300m
              memory: 615Mi
            limits:
              cpu: "2"
              memory: 1Gi
          volumeMounts:
            - name: dshm
              mountPath: /dev/shm
      volumes:
        - name: dshm
          emptyDir:
            medium: Memory
