bash-tools/kubernetes-configs/selenium-grid/base/selenium-grid-hub-ingress.yaml
#
#  Author: KhulnaSoft Ltd
#  Date: 2021-05-13 13:06:05 +0100 (Thu, 13 May 2021)
#
#  vim:ts=2:sts=2:sw=2:et
#  lint: k8s
#
#  https://github.com/KhulnaSoft/DevX/tree/main/bash-tools/kubernetes
#
#  License: see accompanying KhulnaSoft Ltd LICENSE file
#
#  If you're using my code you're welcome to connect with me on LinkedIn
#  and optionally send me feedback to help improve or steer this or other code I publish
#
#  https://www.linkedin.com/company/khulnasoft
#

# ============================================================================ #
#               S e l e n i u m   G r i d   H u b   I n g r e s s
# ============================================================================ #

---
#apiVersion: extensions/v1beta1  # old
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: selenium-hub
  namespace: selenium
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    # deprecated, use ingressClassName under spec section for Kubernetes 1.18+
    #kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    # XXX: Edit to make available externally or apply common ingress.nginx.patch.yaml with shared IP list eg. Cloudflare
    nginx.ingress.kubernetes.io/whitelist-source-range: |
      10.0.0.0/8,
      172.16.0.0/16,
      192.168.0.0/16
spec:
  ingressClassName: nginx
  tls:
    # XXX: Edit
    - hosts:
        - selenium.DOMAIN.COM
      secretName: selenium-hub-tls
  rules:
    # XXX: Edit
    - host: selenium.DOMAIN.COM
      http:
        paths:
          - path: /
            pathType: Prefix  # for new networking.k8s.io/v1
            backend:
              #serviceName: selenium-hub
              #servicePort: 4444
              service:
                name: selenium-hub
                port:
                  number: 4444
